--- a/main/static/show_dish.css
+++ b/main/static/show_dish.css
@@ -61,7 +61,7 @@ body {
     /* margin: 0 auto; */
     text-align: center;
     margin-top: 50px;
-    margin-bottom: 50px;
+    /* margin-bottom: 50px; */
     color: #ffce59;
 }
 #back {
