--- a/main/static/account_update.css
+++ b/main/static/account_update.css
@@ -29,19 +29,23 @@ body {
 }
 /* email */
 .media-body {
-    margin-left: 100px;
+    margin: 0 auto;
+    /* margin-left: 100px; */
     /* font-size: 10px; */
     line-height: 1.2;
 }
 .account-heading {
-    margin-left: 150px;
-    margin-top: 50px;
+    margin: 0 auto;
+    color: #757575;
+    /* margin-left: 150px;
+    margin-top: 50px; */
     font-size: 30px;
   }
 .text-secondary{
-    margin-left: 150px;
+    margin: 0 auto;
+    /* margin-left: 150px; */
     font-size: 15px;
-    margin-bottom: 50px;
+    /* margin-bottom: 50px; */
 }
 
 
