--- a/main/static/home.css
+++ b/main/static/home.css
@@ -12,16 +12,24 @@ body{
     background: #fff9f5;
     padding: 0 10px;
 }
+.wrapper{
+    /* background: #fff; */
+    margin: 100px auto;
+    padding: 30px;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.125);
+    border: 2.5px solid #a4cfbc;
+    margin: 80px auto;
+}
 .container {
     max-width: 2000px;
-    margin: 80px auto;
     padding: 0 20px;
   }
- .container.text {
+.container.text {
     font-size: 16px;
     margin-left: -200px;
     line-height: 1.5;
-    margin-bottom: 20px;
+    margin-top: 80px;
+    margin-bottom: 80px;
 }
 
 .third-paragraph {
