--- a/main/static/main.css
+++ b/main/static/main.css
@@ -10,12 +10,12 @@
 body {
     margin-top: 62px;
     background: #fff9f5;
-    color: #333333;
+    /* color: #333333; */
     margin-top: 5rem;
   }
 .panel-body {
   background: #fff9f5;
-  color: #333333;
+  /* color: #333333; */
   margin-top: 5rem;
 }
 
@@ -31,8 +31,11 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 10px;
+  /* margin-top: 10px; */
   /* position: static; */
+}
+.alert{
+  margin-top: 10px;
 }
 /* .container-but{
   position:fixed;
@@ -121,4 +124,3 @@ a.article-title:hover {
   height: 40px;
   width: 40px;
 }
-
