--- a/main/static/main_bar.css
+++ b/main/static/main_bar.css
@@ -39,6 +39,7 @@ body {
 }
 .wrapper{
   /* margin-top: 40px; */
+  /* margin-bottom: 20px; */
   color: #757575;
   background: #fff;
   margin: 10px auto;
@@ -81,8 +82,8 @@ body {
 }
 
 .name{
-  /* margin-top: 30px; */
-  /* margin-bottom: 25px; */
+  margin-top: 20px;
+  margin-bottom: 5px;
   color: #ffce59;
   font-weight: 700
 }
@@ -97,17 +98,10 @@ body {
   color: #757575;
   font-weight: 300
 }
-.wrapper.consumed{
-  /* margin-right: -20px; */
-  margin-left: 300px;
-  /* display: flex; */
-  /* margin-bottom: 25px; */
-  color: #757575;
-  font-weight: 300
-}
+
 .button{
-  margin-top: 10px;
-  margin-bottom: 40px;
+  /* margin-top: 10px; */
+  margin-bottom: 30px;
 }
 #show{
   /* margin-top: 15px; */
@@ -126,7 +120,7 @@ body {
   background-color: #a4cfbc;
   border: none;
 }
-#delete{
+.btn-danger{
   color: #fff;
   /* margin-top: 50px;
   margin-bottom: 50px; */
