--- a/main/templates/account.html
+++ b/main/templates/account.html
@@ -5,8 +5,8 @@
     <div class="media">
       <img class="rounded-circle account-img" src="{{ image_file }}">
       <div class="media-body">
-        <h2 class="account-heading"> Welcome {{ current_user.username }}!</h2>
-        <p class="text-secondary">{{ current_user.email }}</p>
+        <h2 class="account-heading"> Welcome, {{ current_user.username }}!</h2>
+        <!-- <p class="text-secondary">{{ current_user.email }}</p> -->
       </div>
     </div>
     <a class="form-control" id="personal_info" href="{{ url_for('account_update') }}">Personal Info</a>
