--- a/main/templates/account_update.html
+++ b/main/templates/account_update.html
@@ -6,7 +6,7 @@
             <img class="rounded-circle account-img" src="{{ image_file }}">
             <div class="media-body ml-3">
                 <h2 class="account-heading">{{ current_user.username }}</h2>
-                <p class="text-secondary">{{ current_user.email }}</p>
+                <!-- <p class="text-secondary">{{ current_user.email }}</p> -->
             </div>
         </div>
         <div class="info">
