--- a/main/templates/show_dish.html
+++ b/main/templates/show_dish.html
@@ -3,7 +3,7 @@
     <link href="{{ url_for('static', filename='show_dish.css') }}" rel="stylesheet">
     <div class="wrapper">
         <div class = "title">
-            Choosen Dish
+            Chosen Dish
         </div>
         <div class = "input_field">
         {% for meal in dish_lst %}
