--- a/main/static/login.css
+++ b/main/static/login.css
@@ -15,6 +15,7 @@ body {
 .wrapper {
     /* max-width: 500px;
     width: 100%; */
+    margin: 80px auto;
     background: #fff;
     margin: 100px auto;
     padding: 30px;
@@ -27,6 +28,9 @@ body {
 }
 .border-top {
     /* margin-top: 500px; */
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
     margin-top: -60px;
     font-family: 'Montserrat', sans-serif;
 }
@@ -37,7 +41,7 @@ body {
 .forgot{
     color: #757575;
     /* margin-top: -200px; */
-    margin-left: 310px;
+    /* margin: 0 auto; */
 }
 .wrapper .title {
     font-size: 22px;
