--- a/main/static/login.css
+++ b/main/static/login.css
@@ -33,6 +33,7 @@ body {
     flex-wrap: wrap;
     margin-top: -60px;
     font-family: 'Montserrat', sans-serif;
+    gap: 30px;
 }
 .text-muted{
     color: #757575;
