--- a/main/templates/account_plan.html
+++ b/main/templates/account_plan.html
@@ -63,7 +63,7 @@
                         {% endfor %}
                     </div>
                 {% else %}
-                    {{ form.servings(class="form-control form-control-xxl", onchange="updateValues()")}}
+                    {{ form.servings(class="form-control form-control-xxl", disabled=True, id="servings", onchange="updateValues()")}}
                 {% endif%}
             </div>
         </fieldset>
@@ -97,6 +97,7 @@
     const proteinsField = document.getElementById('proteins');
     const carbsField = document.getElementById('carbs');
     const fatsField = document.getElementById('fats');
+    const servingsField = document.getElementById('servings');
 
     // Add an event listener to the first radio button
     firstOption.addEventListener('change', function() {
@@ -105,11 +106,13 @@
         proteinsField.disabled = true;
         carbsField.disabled = true;
         fatsField.disabled = true;
+        servingsField.disabled = true;
     } else {
         // Enable the fields
         proteinsField.disabled = false;
         carbsField.disabled = false;
         fatsField.disabled = false;
+        servingsField.disabled = false;
     }
     });
 
@@ -119,11 +122,14 @@
         proteinsField.disabled = false;
         carbsField.disabled = false;
         fatsField.disabled = false;
+        servingsField.disabled = false;
+        
     } else {
         // Disable the fields
         proteinsField.disabled = true;
         carbsField.disabled = true;
         fatsField.disabled = true;
+        servingsField.disabled = true;
     }
 });
   </script>
