--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -81,7 +81,7 @@
     this.fillElem.style.width = percentage;
   }
   updateValue() {
-    const total = this.total + ' kkal';
+    const total = this.total + ' kcals';
     this.valueElem.textContent = total;
   }
 }
