--- a/main/templates/layout.html
+++ b/main/templates/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="shortcut icon" href="{{ url_for('static', filename = 'profile_pics/' + 'logo.jpg' ) }}" type="image/x-icon">
+    <link rel="shortcut icon" href="{{ url_for('static', filename = 'profile_pics/' + 'logo.png' ) }}" type="image/x-icon">
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
