--- a/main/templates/account_update.html
+++ b/main/templates/account_update.html
@@ -6,7 +6,7 @@
             <img class="rounded-circle account-img" src="{{ image_file }}">
             <div class="media-body ml-3">
                 <h2 class="account-heading">{{ current_user.username }}</h2>
-                <!-- <p class="text-secondary">{{ current_user.email }}</p> -->
+                <p class="text-secondary">{{ current_user.email }}</p>
             </div>
         </div>
         <div class="info">
@@ -33,19 +33,6 @@
                         </div>
                     {% else %}
                         {{ form.username(class="form-control form-control-xxl") }}
-                    {% endif %}
-                </div>
-                <div class="input_field">
-                    {{ form.email.label(class="form-control-label") }}
-                    {% if form.email.errors %}
-                        {{ form.email(class="form-control form-control-xxl is-invalid") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.email.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                    {% else %}
-                        {{ form.email(class="form-control form-control-xxl") }}
                     {% endif %}
                 </div>
                 <div class="input_field">
