--- a/main/templates/results.html
+++ b/main/templates/results.html
@@ -1,21 +1,28 @@
 {% extends "layout.html" %}
 {% block content %}
-    <link href="{{ url_for('static', filename='results.css') }}" rel="stylesheet">
-    <div class="wrapper">
-        <div class = "title">
-            Available Options
-        </div>
-        <div class = "input_field">
-        {% for meal in results %}
-            <fieldset class="form-group">
-                <div class="info">
-                    {{ meal }}
-                </div>
-            </fieldset>
-        {% endfor %}
-        </div>
-        <div class="input_field_">
-            <a class="form-control" id="exit" href="{{ url_for('main') }}">Exit</a>
-        </div>
+<link href="{{ url_for('static', filename='show_dish.css') }}" rel="stylesheet">
+<div class="wrapper">
+    <div class = "title">
+        Available Options
     </div>
+    {% for meal in results %}
+        <fieldset class="form-group">
+            {% for dish in meal[0] %}
+                <div class = "info">
+                    {{ dish }}
+                </div>
+            {% endfor %}
+            <div class = "elem">
+                Calories: {{ meal[1].calories }}<br>
+                Proteins: {{ meal[1].proteins }}<br>
+                Carbs: {{ meal[1].carbs }}<br>
+                Fats: {{ meal[1].fats }}<br>
+            </div>
+        </fieldset>
+        <br>
+    {% endfor %}
+    <div class="input_field_">
+        <a class="form-control" id="back" href="{{ url_for('main') }}">Back</a>
+    </div>
+</div>
 {% endblock content %}
