main bar updated

--- a/main/static/main_bar.css
+++ b/main/static/main_bar.css
@@ -120,7 +120,7 @@ body {
   background-color: #ffce59;
   border: none;
 }
-.btn-danger.hover{
+.btn-sm.hover{
   color: #fff;
   background-color: #ffce59;
   border: none;
