--- a/main/static/results.css
+++ b/main/static/results.css
@@ -13,17 +13,11 @@ body {
 }
 
 .wrapper {
-    /* max-width: 1000px;
-    width: 100%; */
     background: #fff;
     margin: 100px auto;
     padding: 30px;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.125);
     border: 2.5px solid #a4cfbc;
-    /* position: absolute; */
-    /* top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); */
 }
 
 .wrapper .title {
@@ -45,17 +39,13 @@ body {
     margin-bottom: 15px;
     color: #57817f;
 }
-
-/* .wrapper.form-group {
-    background-color: #a4cfbc;
-    color: #757575;
+.elem{
+    margin-top: 15px;
+    margin-left: 100px;
+    margin-right: auto;
+    color: #a4cfbc;
 }
-.wrapper.form-group:hover {
-    background-color: #57817f;
-    color: #fff;
-} */
 .wrapper .input_field_ {
-    /* margin: 0 auto; */
     text-align: center;
     margin-top: 50px;
     margin-bottom: 50px;
