--- a/main/static/show_dish.css
+++ b/main/static/show_dish.css
@@ -13,17 +13,11 @@ body {
 }
 
 .wrapper {
-    /* max-width: 1000px;
-    width: 100%; */
     background: #fff;
     margin: 100px auto;
     padding: 30px;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.125);
     border: 2.5px solid #a4cfbc;
-    /* position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); */
 }
 
 .wrapper .title {
@@ -38,8 +32,6 @@ body {
 }
 
 .wrapper .input_field {
-    /* margin: 0 auto; */
-    /* text-align: center; */
     margin-top: 50px;
     margin-bottom: 50px;
     color: #ffce59;
@@ -55,17 +47,15 @@ body {
     margin-left: 50px;
     margin-right: auto;
     color: #a4cfbc;
-    /* text-align: center; */
 }
 .wrapper .input_field_ {
-    /* margin: 0 auto; */
+    margin: auto center;
     text-align: center;
     margin-top: 50px;
-    /* margin-bottom: 50px; */
+    margin-bottom: 50px;
     color: #ffce59;
 }
 #back {
-    /* margin: 0 auto; */
     background-color: #a4cfbc;
     color: #fff;
 }
