--- a/main/static/account.css
+++ b/main/static/account.css
@@ -8,6 +8,7 @@
 }
 
 body {
+    background-image: url('https://i.imgur.com/EOwNIBg.png');
     margin-top: 62px;
     color: #757575;
     /* margin-top: 325px; */
