--- a/main/static/account_update.css
+++ b/main/static/account_update.css
@@ -7,8 +7,8 @@
     font-family: 'Montserrat', sans-serif;
 }
 body {
+    background-image: url('https://i.imgur.com/EOwNIBg.png');
     margin-top: 62px;
-    background: #fff9f5;
     padding: 0 10px;
     /* margin-bottom: 100px; */
 }
@@ -18,7 +18,14 @@ body {
 .media {
     display: flex;
     align-items: center;
-    margin-bottom: 30px
+    margin-bottom: 30px;
+    color: #757575;
+    /* font-size: 8px; */
+    background: #fff;
+    margin: 40px auto;
+    padding: 30px;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.125);
+    border: 2.5px solid #a4cfbc;
 }
 
 .account-img {
