--- a/main/static/calculator.css
+++ b/main/static/calculator.css
@@ -7,8 +7,8 @@
     font-family: 'Montserrat', sans-serif;
 }
 body {
+    background-image: url('https://i.imgur.com/EOwNIBg.png');
     margin-top: 65px;
-    background: #fff9f5;
     padding: 0 10px;
 }
 
