--- a/main/static/calories.css
+++ b/main/static/calories.css
@@ -9,8 +9,8 @@
 }
 
 body{
+    background-image: url('https://i.imgur.com/EOwNIBg.png');
     margin: 40px auto;
-    background: #f5eee7;
     padding: 0 10px;
 }
 .wrapper{
