--- a/main/static/home.css
+++ b/main/static/home.css
@@ -8,12 +8,13 @@
 }
 body{
     /* margin-left: -300px; */
+    background-image: url('https://i.imgur.com/EOwNIBg.png');
     margin-top: 62px;
-    background: #fff9f5;
     padding: 0 10px;
 }
 .wrapper{
     /* background: #fff; */
+    background-color: white;
     margin: 100px auto;
     padding: 30px;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.125);
