--- a/main/static/login.css
+++ b/main/static/login.css
@@ -8,38 +8,29 @@
 }
 body {
     margin-top: 62px;
-    background: #fff9f5;
     padding: 0 10px;
+    background-image: url('https://i.imgur.com/EOwNIBg.png');
 }
 
 .wrapper {
-    /* max-width: 500px;
-    width: 100%; */
     margin: 80px auto;
     background: #fff;
     margin: 100px auto;
     padding: 30px;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.125);
     border: 2.5px solid #a4cfbc;
-    /* position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); */
 }
 .border-top {
-    /* margin-top: 500px; */
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin-top: -60px;
-    font-family: 'Montserrat', sans-serif;
-    gap: 30px;
+    margin-top: 50px;
+    margin-bottom: 0px;
+    text-align: center;
 }
 .text-muted{
     color: #757575;
-    /* margin-top: -200px; */
 }
 .forgot{
+    /* gap: 40px; */
+    margin: auto 6px;
     color: #757575;
     /* margin-top: -200px; */
     /* margin: 0 auto; */
@@ -60,7 +51,6 @@ body {
 margin-top: 20px;
 margin-bottom: 15px;
 display: flex;
-align-items: center;
 }
 
 .wrapper .form .input_field label {
@@ -78,6 +68,7 @@ font-size: 15px;
 padding: 8px 10px;
 border-radius: 3px;
 transition: all 0.3s ease;
+margin-top: 15px;
 }
 
 .wrapper .form .input_field .input:focus,
@@ -91,6 +82,7 @@ color: #757575;
 } */
 
 .wrapper .form .input_field.terms p{
+    /* margin-top: 15px; */
     margin-top: 15px;
     margin-left: -175px;
     font-size: 14px;
@@ -107,14 +99,9 @@ color: #757575;
     border: 1px solid #e6c23e;
     color: #e6c23e;
     background: #e6c23e;
+    margin-top: 15px;
 }
 
-.wrapper .form .input_field_checkbox .check input[type="checkbox"]{
-    position: absolute;
-    top: 0;
-    left: 0;
-    opacity: 0;
-}
 .wrapper .form .input_field.checkmark{
     width: 15px;
     height: 15px;
@@ -157,6 +144,7 @@ color: #757575;
     outline: none;
     margin: 0 auto;
     display: block;
+    margin-right: 10px;
 }
 /* .wrapper .input_field.forgot"{
     margin-right: 15px;
