--- a/main/static/main.css
+++ b/main/static/main.css
@@ -9,7 +9,8 @@
 
 body {
     margin-top: 62px;
-    background: #fff9f5;
+    /* background: #fff9f5; */
+    /* background-color: transparent; */
     /* color: #333333; */
     margin-top: 5rem;
   }
@@ -73,7 +74,7 @@ body {
 
 .content-section {
   margin: 40px auto;
-  background: #fff9f5;;
+  background: #fff9f5;
   padding: 10px 20px;
   border: 1px solid #dddddd;
   border-radius: 3px;
