--- a/main/static/main_bar.css
+++ b/main/static/main_bar.css
@@ -11,6 +11,7 @@ body {
     margin-top: 62px;
     color: #757575;
     margin-bottom: 25px;
+    background-image: url('https://i.imgur.com/EOwNIBg.png');
 }
 .main{
   margin: 40px auto;
