--- a/main/static/meals.css
+++ b/main/static/meals.css
@@ -7,10 +7,11 @@
     font-family: 'Montserrat', sans-serif;
 }
 body {
+    background-image: url('https://i.imgur.com/EOwNIBg.png');
     margin-top: 62px;
-    background: #fff9f5;
     padding: 0 10px;
     /* position: center; */
+
 }
 
 
