--- a/main/static/personal_info.css
+++ b/main/static/personal_info.css
@@ -8,8 +8,8 @@ font-family: 'Montserrat', sans-serif;
 }
 body {
     margin-top: 62px;
-    background: #fff9f5;
     padding: 0 10px;
+    background-image: url('https://i.imgur.com/EOwNIBg.png');
 }
 
 .wrapper {
