--- a/main/static/register.css
+++ b/main/static/register.css
@@ -9,8 +9,8 @@
 
 body{
     margin-top: 62px;
-    background: #fff9f5;
     padding: 0 10px;
+    background-image: url('https://i.imgur.com/EOwNIBg.png');
 }
 .wrapper{
     background: #fff;
@@ -19,10 +19,12 @@ body{
     box-shadow: 1px 1px 2px rgba(0,0,0,0.125);
     border: 2.5px solid #a4cfbc;
 }
-.border-top {
-    margin-top: -60px;
-}
 
+.border-top{
+    margin-top: 50px;
+    margin-bottom: 0px;
+    /* text-align: center; */
+}
 .wrapper .title{
     font-size: 22px;
     font-weight: 700;
@@ -81,6 +83,7 @@ body{
     outline: none;
     margin: 0 auto;
     display: block;
+    margin-right: 10px;
 }
 .wrapper .form-group:last-child{
     margin-bottom:0;
