--- a/main/static/reset_request.css
+++ b/main/static/reset_request.css
@@ -8,8 +8,8 @@
 }
 body {
     margin-top: 62px;
-    background: #fff9f5;
     padding: 0 10px;
+    background-image: url('https://i.imgur.com/EOwNIBg.png');
 }
 
 .wrapper {
@@ -20,10 +20,6 @@ body {
     padding: 30px;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.125);
     border: 2.5px solid #a4cfbc;
-    /* position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); */
 }
 
 .wrapper .title {
