--- a/main/static/reset_token.css
+++ b/main/static/reset_token.css
@@ -8,22 +8,22 @@
 }
 body {
     margin-top: 62px;
-    background: #fff9f5;
     padding: 0 10px;
+    background-image: url('https://i.imgur.com/EOwNIBg.png');
 }
 
 .wrapper {
-    max-width: 500px;
-    width: 100%;
+    /* max-width: 500px;
+    width: 100%; */
     background: #fff;
     margin: 40px auto;
     padding: 30px;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.125);
     border: 2.5px solid #a4cfbc;
-    position: absolute;
+    /* position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); */
 }
 
 .wrapper .title {
