--- a/main/static/settings.css
+++ b/main/static/settings.css
@@ -8,8 +8,8 @@
 }
 body {
     margin-top: 62px;
-    background: #fff9f5;
     padding: 0 10px;
+    background-image: url('https://i.imgur.com/EOwNIBg.png');
 }
 
 .wrapper {
