--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -20,6 +20,9 @@
                 <p>
                     That's the reason why our team created this project so that you could remain healthy and your life would become less complicated.
                 </p>
+                <div class="alert alert-warning">
+                    <strong>Warning, this web-application was not created by dietologists, please consult with your doctor!</strong>
+                  </div>
                 <p>
                     We would be glad to help you with choosing balanced and healthy meal in Trapezna, UCU, don't waste your time and<a class="ml-2 btn-register" href="{{ url_for('register') }}">register</a> or<a class="ml-2 btn-register" href="{{ url_for('login') }}">login</a> or just
                     use our<a class="ml-2 btn-register" href="{{ url_for('calculator') }}">calculator</a>
