--- a/main/templates/menu.html
+++ b/main/templates/menu.html
@@ -5,6 +5,9 @@
     <div class = "title">
         Menu
     </div>
+    <div class="alert alert-danger">
+        <strong>Attention! Some dishes may include allergens</strong>
+      </div>
     <div class = "input_field">
     {% for category in meals %}
         <div class="name">
