--- a/main/templates/show_dish.html
+++ b/main/templates/show_dish.html
@@ -9,7 +9,7 @@
     {% for meal in dish_lst %}
         <fieldset class="form-group">
             <div class = "info">
-                {{ meal }}<br>
+                {{ meal }}
             </div>
     {% endfor %}
             <div class = "elem">
