--- a/main/static/account.css
+++ b/main/static/account.css
@@ -8,10 +8,15 @@
 }
 
 body {
+    background-image: url('https://i.imgur.com/EOwNIBg.png');
     margin-top: 62px;
     color: #757575;
     /* margin-top: 325px; */
     margin-bottom: 25px;
+}
+
+.main{
+    text-align: center;
 }
 
 .content-section{
