--- a/main/static/main_bar.css
+++ b/main/static/main_bar.css
@@ -11,6 +11,7 @@ body {
     margin-top: 62px;
     color: #757575;
     margin-bottom: 25px;
+    background-image: url('https://i.imgur.com/EOwNIBg.png');
 }
 .main{
   margin: 40px auto;
@@ -48,7 +49,7 @@ body {
   border: 2.5px solid #a4cfbc;
 }
 .title{
-  margin-top: 50px;
+  margin-top: 20px;
   font-size: 22px;
   font-weight: 700;
   margin-bottom: 25px;
@@ -63,6 +64,7 @@ body {
   height: 40px;
   border-radius: 1px;
   border: #57817f;
+  margin-bottom: 20px;
 }
 
 .progress-bar-fill {
@@ -151,4 +153,3 @@ body {
   color: #757575;
   background-color: #a4cfbc;
 }
-
