--- a/main/templates/results.html
+++ b/main/templates/results.html
@@ -13,10 +13,10 @@
                 </div>
             {% endfor %}
             <div class = "elem">
-                Calories: {{ meal[1].calories }}<br>
-                Proteins: {{ meal[1].proteins }}<br>
-                Carbs: {{ meal[1].carbs }}<br>
-                Fats: {{ meal[1].fats }}<br>
+                Calories: {{ meal[1].calories }} kcals<br>
+                Proteins: {{ meal[1].proteins }} g<br>
+                Carbs: {{ meal[1].carbs }} g<br>
+                Fats: {{ meal[1].fats }} g<br>
             </div>
         </fieldset>
         <br>
