--- a/main/static/account.css
+++ b/main/static/account.css
@@ -14,36 +14,35 @@ body {
     /* margin-top: 325px; */
     margin-bottom: 25px;
 }
-
+.media-body {
+    margin: 0 auto;
+    font-size: clamp(16px, 2vw, 24px);
+    /* margin-left: 100px; */
+    /* font-size: 10px; */
+    /* line-height: 1.2; */
+}
 .main{
     text-align: center;
 }
 
 .content-section{
     background-color: #fff;
-    /* width: 100%;
-    margin-bottom: 150px; */
     margin: 100px auto;
     padding: 30px;
     border: 3px solid #a4cfbc;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.125);
-    /* position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); */
 }
 
 
 .account-heading {
+    font-size: clamp(14px, 2vw, 22px);
     margin: 40px 10px;
-    /* margin-left: 90px;
-    margin-top: 50px; */
-    font-size: 28px;
+    /* font-size: 4vw !important;
+    font-size: 22px;
+    width: fit-content; */
   }
 .text-secondary{
     margin: auto auto;
-    /* margin-left: 150px;
-    font-size: 15px; */
     margin-bottom: 50px;
 }
 
