--- a/main/static/main.css
+++ b/main/static/main.css
@@ -13,6 +13,7 @@ body {
     /* background-color: transparent; */
     /* color: #333333; */
     margin-top: 5rem;
+    background-image: url('https://i.imgur.com/EOwNIBg.png');
   }
 .panel-body {
   background: #fff9f5;
